Draw first tetromino

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,18 @@
 
     <body>
         <div class="grid">
-            <canvas id="board" class="game-board"></canvas>
+            <canvas class="game-board" data-canvas></canvas>
 
             <div class="right-column">
                 <div>
                     <h1>TETRIS</h1>
-                    <p>Score: <span id="score">0</span></p>
-                    <p>Lines: <span id="lines">0</span></p>
-                    <p>Level: <span id="level">0</span></p>
-                    <canvas id="next" class="next"></canvas>
+                    <p>Score: <span data-score>0</span></p>
+                    <p>Lines: <span data-lines>0</span></p>
+                    <p>Level: <span data-level>0</span></p>
+                    <canvas class="next" data-canvas-next-tetromino></canvas>
                 </div>
 
-                <button onclick="play()" class="play-button">Play</button>
+                <button class="play-button" data-button-play>Play</button>
             </div>
         </div>
     </body>
