Make showing next tetramino

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                     <p>Score: <span data-score>0</span></p>
                     <p>Lines: <span data-lines>0</span></p>
                     <p>Level: <span data-level>0</span></p>
-                    <canvas class="next" data-canvas-next-tetromino></canvas>
+                    <canvas class="next" data-canvas-next></canvas>
                 </div>
 
                 <button class="play-button" data-button-play>Play</button>
